# renderer

./: .gitignore  CMakeLists.txt
cmake/: Renderer.cmake
source/: CMakeLists.txt  update_loop.cpp  update_loop.h  window.cpp  window.h  window_creation_params.cpp  window_creation_params.h
source/camera/: CMakeLists.txt  camera.cpp  camera.h  lens.cpp  lens.h  set_camera_on_renderer.cpp  set_camera_on_renderer.h
source/common/: CMakeLists.txt  assertions.cpp  assertions.h  logger.cpp  logger.h  profiler.cpp  profiler.h  utils.cpp  utils.h  version.cpp  version.h
source/geometry/: CMakeLists.txt  element_data_source.cpp  element_data_source.h  geometry.h  geometry_base.cpp  geometry_base.h  load_geometry.cpp  load_geometry.h  render_geometry.cpp  render_geometry.h  vertex.cpp  vertex.h  vertex_data_source.cpp  vertex_data_source.h  vertex_data_source_semantics.h  vertex_description.h
source/image/: CMakeLists.txt  image.cpp  image.h  image_creation_params.cpp  image_creation_params.h  png_writer.cpp  png_writer.h
source/material/: CMakeLists.txt  compile_shader.cpp  compile_shader.h  create_shader_program.cpp  create_shader_program.h  set_shader_program.cpp  set_shader_program.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  uniform.cpp  uniform.h
source/model/: CMakeLists.txt  model.cpp  model.h  render_model.cpp  render_model.h
source/rendering/: CMakeLists.txt  bindable.cpp  bindable.h  command.cpp  command.h  command_list.cpp  command_list.h  gl_debug.cpp  gl_debug.h  render_pool.cpp  render_pool.h  renderer.cpp  renderer.h
source/system/: CMakeLists.txt  frame_memory.cpp  frame_memory.h
source/thread/: CMakeLists.txt  auto_reset_event.cpp  auto_reset_event.h  thread.cpp  thread.h
source/transformations/: CMakeLists.txt  transformation.cpp  transformation.h
tests/: CMakeLists.txt
tests/open_window/: CMakeLists.txt  main.cpp
tests/regression_tests/: basic.py
tests/test_utils/: CMakeLists.txt  basic_test_application.cpp  basic_test_application.h
tests/triangle/: CMakeLists.txt  main.cpp
tests/unit_tests/: CMakeLists.txt  main.cpp
tests/write_image/: CMakeLists.txt  main.cpp
